--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ body {
 }
 
 .footer {
+     width: 100%;
      height: 5vh;
      text-align: center;
+
 }
 
 .footer a {
@@ -106,5 +108,9 @@ tr:nth-child(even) {
           flex-direction: column;
           row-gap: 3vh;
 
+     }
+
+     .footer {
+          text-align: right;
      }
 }
